--- a/CarOnline.Web/Views/Vehicles/Index.cshtml
+++ b/CarOnline.Web/Views/Vehicles/Index.cshtml
@@ -28,10 +28,22 @@
                                 <th>
                                     @Html.DisplayNameFor(model => model.Plate)
                                 </th> 
-                                <th>
-                                    
+                                 <th>
+                                    @Html.DisplayNameFor(model => model.Model)
                                 </th>
-                                    <th></th>
+                                 <th>
+                                    @Html.DisplayNameFor(model => model.Doors)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.TypesNumber)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.BrandsNumber)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.PhotosNumber)
+                                </th>
+                                 
                             </tr>
                         </thead>
                         <tbody>
@@ -42,7 +54,19 @@
                                         @Html.DisplayFor(modelItem => item.Plate) 
                                     </td>
                                     <td>
-                                        
+                                        @Html.DisplayFor(modelItem => item.Model) 
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Doors) 
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.TypesNumber)
+                                    </td>
+                                     <td>
+                                        @Html.DisplayFor(modelItem => item.BrandsNumber)
+                                    </td>
+                                     <td>
+                                        @Html.DisplayFor(modelItem => item.PhotosNumber)
                                     </td>
                                    <td>
                                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning"><i class="fas fa-edit"></i></a> 
