--- a/CarOnline.Web/Views/Shared/_Layout.cshtml
+++ b/CarOnline.Web/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="index">Vehicles</a>
+                        </li>                       
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="BrandsIndex">Brands</a>
                         </li>
                     </ul>
                 </div>
