--- a/CarOnline.Web/Views/Vehicles/Create.cshtml
+++ b/CarOnline.Web/Views/Vehicles/Create.cshtml
@@ -28,6 +28,11 @@
                 <span asp-validation-for="Doors" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Type" class="control-label"></label>
+                <input asp-for="Type" class="form-control" />
+                <span asp-validation-for="Type" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -35,6 +40,6 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-success">Back to List</a>
+    <a asp-action="BrandsIndex" class="btn btn-success">Back to List</a>
 </div>
 
